# embree

./: CMakeLists.txt
cmake/: FindEmbree3.cmake  FindGlm.cmake  FindOpenImageIO.cmake
src/: geometry.cc  instance.cc  pinhole_camera.cc  pinhole_camera.h
